# libobjecttracker

./: .gitignore  .gitmodules  CMake.cmake  CMakeLists.txt  README.md  package.xml
include/libobjecttracker/: cloudlog.hpp  object_tracker.h
launch/: cf1.yaml  cf2.yaml  config1.rviz  configuration.launch  crazyflie_pos_multi.rviz  debug.launch  hover_vicon.launch  multi_hover_vicon.launch  object_tracker.yaml  teleop_xbox360.launch
src/: configuration_node.cpp  make_playclouds.sh  object_tracker.cpp  object_tracker_node.cpp  playclouds.cpp  profile.cpp  transformation_estimation_3DYaw.h  transformation_estimation_3DYaw.hpp
